test/fail_compilation/gag4269a.d
// REQUIRED_ARGS: -c -o-

static if(is(typeof(A4269.sizeof))) {}

class A4269
{
    void foo(B b);
}


 